# lvgl_touch_calibration

./: CMakeLists.txt  Kconfig  LICENSE.md  README.md  component.mk  esp_nvs_tc.c  esp_nvs_tc.h  idf_component.yml  lv_tc.c  lv_tc.h  lv_tc_config.h  lv_tc_screen.c  lv_tc_screen.h
img/: lv_tc_indicator_img.c
